--- a/src/main/resources/static/css/factura.css
+++ b/src/main/resources/static/css/factura.css
@@ -1,4 +1,4 @@
-/* --- ESTILOS GENERALES --- */
+/* --- estilo esocigido --- */
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
@@ -9,7 +9,7 @@ body {
   animation: fadeIn 1s ease-in-out;
 }
 
-/* --- NAVBAR (MISMA QUE MESA Y MESERO) --- */
+/* --- barra de navegaciom --- */
 .menu-bar {
   background-color: rgba(255, 255, 255, 0.85);
   padding: 15px 0;
@@ -66,7 +66,7 @@ body {
   transform: translateY(-2px);
 }
 
-/* --- CONTENIDO PRINCIPAL --- */
+/* --- contenido princial --- */
 main {
   padding: 40px 20px;
   text-align: center;
@@ -79,7 +79,7 @@ h1 {
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* --- TABLA PRINCIPAL --- */
+/* --- tabla principal --- */
 .table-container {
   background-color: rgba(255, 255, 255, 0.85);
   padding: 25px;
@@ -131,7 +131,7 @@ tr:hover {
   transform: translateY(-2px);
 }
 
-/* --- DETALLE DE FACTURA --- */
+/* --- zona de detalles de factura --- */
 .detalle-factura {
   background-color: rgba(255, 255, 255, 0.85);
   padding: 30px;
@@ -182,7 +182,7 @@ tr:hover {
   transform: translateY(-2px);
 }
 
-/* --- ANIMACIÓN GENERAL --- */
+/* --- ANIMACIÓN  --- */
 @keyframes fadeIn {
   from {
     opacity: 0;
