--- a/src/main/resources/static/css/mesa.css
+++ b/src/main/resources/static/css/mesa.css
@@ -47,6 +47,14 @@ body {
   color: black;
   transform: translateY(-2px);
 }
+/* boton activo al estar en la pagina */
+.menu-bar ul li a.active {
+  background-color: #87CEEB;
+  color: black;
+  transform: translateY(-2px);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
+}
+
 
 /* boton de cerrar seccion */
 .logout-nav form {
