--- a/src/main/resources/templates/platillos.html
+++ b/src/main/resources/templates/platillos.html
@@ -64,7 +64,7 @@
         </div>
     </div>
 </main>
-<script th:src="@{/js/platilloConfirmacion.js}"></script>
+<script th:src="@{/js/Confirmacion.js}"></script>
 
 </body>
 </html>
